fix skillList grid gap and padding

--- a/src/app/components/skills.module.css
+++ b/src/app/components/skills.module.css
@@ -6,18 +6,17 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: auto auto auto;
-  gap: 1rem 3rem;
+  gap: 1rem;
   font-size: x-large;
 }
 
 .skillItem {
   display: flex;
-  gap: 0.75rem;
+  gap: 0.5rem;
   justify-content: center;
   align-items: center;
   background-color: var(--light-primary);
-  /* color: var(--dark-secondary); */
-  padding: 0.5rem 1.85rem;
+  padding: 0.5rem 0;
   border: 2px solid var(--light-primary);
   border-radius: 8px;
 }
